# VeryFast

./: Cargo.toml  README.md
src/: lib.rs  pool.rs  small_buffer.rs  tiny_buffer.rs
