[package]
name = "veryfast"
version = "0.3.1"
description = "Fast Rust and other tools for game development."
license = "MIT"
authors = ["Epicat Supercell <epicatsupercell@gmail.com>"]
readme = "README.md"
repository = "https://github.com/EpicatSupercell/VeryFast"

[lib]
name = "veryfast"
path = "src/lib.rs"

[dependencies]
crossbeam = "^0.3.2"

[dev-dependencies]
scoped_threadpool = "^0.1.8"